basic tweet data accessible via timeline and map

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>My Status</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/timeline.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/timeline.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -14,8 +16,8 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
   </head>
   <body>
-    <div id="map">
-    </div>
+    <ul id="timeline"></ul>
+    <div id="map"></div>
     <div class="overlay"></div>
   </body>
 </html>
