flights within 3 days show up on the timeline

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/timeline.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/flightstats.js"></script>
     <script src="js/data.js"></script>
     <script src="js/timeline.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
