loading screen to cut loading choppiness

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <ul id="timeline"></ul>
     <div id="map"></div>
     <div class="overlay"></div>
+    <div id="loadingCover"></div>
   </body>
 </html>
