added a loading message in case twitter takes a while

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
   </head>
   <body>
+    <div id="tweetsLoading">Loading Tweets</div>
     <ul id="timeline"></ul>
     <div id="map"></div>
     <div class="overlay"></div>
